# pfas-project

./: .gitignore  .pre-commit-hook  CLAUDE.md  CODE_REVIEW_FIXES_SUMMARY.md  Data  ENCRYPTED_FILE_SETUP.md  INTEGRATION_TESTS_QUICK_REFERENCE.md  INTEGRATION_TESTS_SUMMARY.md  INTEGRATION_TEST_GUIDE.md  MF_CAMS_IMPLEMENTATION_SUMMARY.md  MF_CAMS_INTEGRATION_TEST_REPORT.md  Makefile  PFAS_PROJECT_CONTEXT.md  PHASE_2_CHANGES_PLAN.md  README.md  README_CLI.md  REGRESSION_TEST_SETUP.md  RUN_INTEGRATION_TESTS.md  S3_S4_IMPLEMENTATION_SUMMARY.md  TEST_REFACTORING_COMPLETE_GUIDE.md  TEST_REFACTORING_SUMMARY.md  TEST_REFACTORING_VALIDATION.md  V6.2_IMPLEMENTATION_SUMMARY.md  gap.txt  integration-result  mf-analyzer  pfas-report  pfas_test_result  pyproject.toml  pytest.ini  repo_structure.txt  requirements.txt  test_nps_integration.py  test_result_30_J  test_result_30_J.txt  test_stock_integration.py
config/: default_coa.json  ledger_mappings.json  mf_analyzer_config.json  mf_analyzer_config_v2.json  networth_config.json  paths.json  statement_rules.json  stock_analyzer_config.json  test_config.json
config/parser_configs/: cams_columns.json  karvy_columns.json
docs/: AUDIT_FINDINGS_JAN2026.md  CAPITAL_GAINS_ANALYSIS.md  DESIGN_DOCUMENT.md  ENCRYPTED_FILES.md  FAILURE_SAFE_PROCESSING.md  GOLDEN_REFERENCE.md  ICICI_DIRECT_SMART_INTEGRATION.md  ICICI_PARSER_TEST_REPORT.md  MF_ANALYZER_CONFIG.md  MF_ANALYZER_README.md  README-MF.md  SESSION_CONTEXT_JAN27_2026.md  STATEMENT_TYPE_DETECTION.md  STOCK_ANALYZER_DESIGN.md  TESTING.md  stock_analyzer_schema_updates.sql
migrations/: 001_foundation_hardening.py  002_golden_reference.py  003_uri_support.py
prompts/: PFAS_Claude_Code_Implementation_Guide.md  S1_bank_parser.md  S1_core.md  S2_mf_cams.md  S2_mf_karvy.md  S3_S4_combined.md  S3_stock_icici.md  S5_salary_form16.md  S7_S8_combined.md  S9_S15_phase2.md
scripts/: .verify_module.sh.swp  install_hooks.sh  run_regression_tests.sh  setup_test_env.sh  verify_module.sh
src/pfas/: __init__.py
tests/: README_TEST_REFACTORING.md  __init__.py  conftest.py
(+267 files in other folders)
